metrics/tests/macros/02_metric_name.stderr
error: metric name must match ^[a-zA-Z][a-zA-Z0-9_:.]*$
 --> $DIR/02_metric_name.rs:8:14
  |
8 |     counter!("abc$def");
  |              ^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
